Fix height of arrows is sometimes incorrect when firing over ledges.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -37,9 +37,19 @@ Graphics:
 
 
 Current tasks:
-    - When chakram/bow is fired while standing over the tip of a ledge.
-        - This is inconsistent and also makes it so your projectiles will be blocked by other ledges.
-        - Let's fix this by setting "isHigh" true initially on projectiles if an ~12x6 rectangle centered on the projectile hitbox is under a ledge.
+    - Enemies don't die until they unfreeze.
+
+    - Throwing clone towards doorways seems to cause it to despawn
+        - Theory: clone can be thrown into doorway, but cannot land in doorway.
+            - Solution: treat lowCeiling tiles as walls for thrown/knocked actors. This might help with getting knocked out of areas as well.
+
+    - Shouldn't be able to kill beasts while hearts are alive.
+
+    - Burn is too powerful
+        - Reduce burn damage to 20% when bosses enter enrage phases.
+
+    - Make sure climb speed isn't too fast with cloud boots (catching up with growing vines looks bad)
+
 
     - Add underwater swimming animation once Jon provides it.
 
