--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,6 +39,46 @@ Graphics:
 
 
 Current tasks:
+    - Toggle iron boots seems broken when a clone is up.
+    - Entering rival 2 fight from the top looks bad.
+    - Spirit Barrier doesn't stop hot room burning damage.
+
+    - Add blocked path object
+        -> Set originalTiles when applying variants so they still apply when resetting areas on scrolling to them.
+            -> Possibly need to re-apply variants on resetting areas to preserve objects when scrolling.
+        -> Allow copying and pasting variants
+        -> Allow referencing variants by id in logic anywhere with a logic requirement.
+
+    - Add variable switch object
+        - Set map of type -> weight
+            - types: burstSwitch, flameSwitch/frostSwitch/stormSwitch, heldSwitch(good for doors only),
+
+    - Add variable checks to procedurally generated areas
+        - Adding variable checks to varition objects is a little tricky because the randomizer has to both be able to read + write the checks
+        but there won't be an object definitions to write the checks to, so it would have to be added as an override to the variationData.
+        - This is also tricky for procedurally generated, but it is a hard requirement for them so it isn't extra work.
+
+    - Populate Spirit City
+        - Add placeholder NPCs and dialogue
+            - Use lightning drone + robot sprites as placeholders
+        - Add an NPC with a check to the SW house
+        - Add procedural checks + obstacles to the spirit money making game area
+
+    - Populate Spirit Ruins
+        - Link entrances to the spirit world
+        - Add placeholder NPCs and dialogue
+            - Use 2x scale elements for NPCs
+        - Add NPC with a check to the East building
+        - Add a visible check somewhere outside that can be peaked early with spirit sight
+        - Add a procedural area to the West building (the building with no entrance in the material world) with 1-2 checks
+
+    - Add a procedural cave to the material overworld with 1-3 checks
+        - checks blocked by any early game items: bow/roll/gloves/astral projection/cloak/teleportation
+
+    - Allow resizing variants by clicking and dragging near the edges.
+        - Should probably change the arrow cursor for this.
+
+
     - Bad looking tiles when turning off middle beads stream in waterfall tower.
         - The bead cover covers up the beads on the ground. In some sense it should be rendered on a particular tile layer.
         - We can fix this by setting a layer id on the bead cover for the layer it is covering (floor2), then when it is not fully open,
