--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,14 +39,12 @@ Graphics:
 
 
 Current tasks:
-    - Toggle iron boots seems broken when a clone is up.
-    - Entering rival 2 fight from the top looks bad.
     - Spirit Barrier doesn't stop hot room burning damage.
+    - Door doesn't glow after beeting flying beetle in peach cave.
 
     - Add blocked path object
         -> Set originalTiles when applying variants so they still apply when resetting areas on scrolling to them.
             -> Possibly need to re-apply variants on resetting areas to preserve objects when scrolling.
-        -> Allow copying and pasting variants
         -> Allow referencing variants by id in logic anywhere with a logic requirement.
 
     - Add variable switch object
@@ -75,6 +73,7 @@ Current tasks:
     - Add a procedural cave to the material overworld with 1-3 checks
         - checks blocked by any early game items: bow/roll/gloves/astral projection/cloak/teleportation
 
+    - Allow copying and pasting variants
     - Allow resizing variants by clicking and dragging near the edges.
         - Should probably change the arrow cursor for this.
 
