--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -42,6 +42,7 @@ Current tasks:
     - Fix storm beast cloud does not knock you away.
     - Fix errors when using invisibility cloak on top of the heart.
     - Can knock pots backwards by hitting them with pots overhead while facing down.
+    - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
 
     - Add a procedural cave to the material overworld with 1-3 checks
         - checks blocked by any early game items: bow/roll/gloves/astral projection/cloak/teleportation
