--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -43,11 +43,18 @@ Current tasks:
     - Fix errors when using invisibility cloak on top of the heart.
     - Can knock pots backwards by hitting them with pots overhead while facing down.
     - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
+    - Jumping north towards the edge of the screen causes you to respawn at a safe location
+        - Tiles off the edge of the screen should count as safe landing spots for landing or they should block you while jumping.
+    - Fix balls can enter doorways (+potential softlock in gauntlet ball puzzle)
+
+
 
     - Add a procedural cave to the material overworld with 1-3 checks
         - checks blocked by any early game items: bow/roll/gloves/astral projection/cloak/teleportation
 
     - Add Spike Boots that replace leather boots. Spike boots never slip and have 10% increased movement speed.
+        - Have to find schematics + 1 silver ore and can craft at regular smith after fully upgrading chakram.
+        - Similar upgrades from spirit smith for iron boots+cloud boots after fully upgrading gold chakram.
 
     - Add additional blockedPath styles.
         - Maybe cracked pots requiring clone tool
