--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -37,17 +37,17 @@ Graphics:
     Add damage effects for hitting enemies?
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
+Cannot reproduce:
+    - Robot stopped moving in ST basement. Maybe ice damage against shield is broken?
+        - Unable to reproduce.
+    - There was a bug where almost killing Storm Heart with burning damage would leave it invulnerable, but I haven't been able to reproduce.
+        - If this happens again, investigate the state of the Storm Heart to get a better understanding of what triggers this, for example is it related to enrage or enemy iframes?
 
 Current tasks:
-    - Fix storm beast cloud does not knock you away.
-    - Fix errors when using invisibility cloak on top of the heart.
-    - Can knock pots backwards by hitting them with pots overhead while facing down.
     - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
     - Jumping north towards the edge of the screen causes you to respawn at a safe location
         - Tiles off the edge of the screen should count as safe landing spots for landing or they should block you while jumping.
     - Fix balls can enter doorways (+potential softlock in gauntlet ball puzzle)
-    - Robot stopped moving in ST basement. Maybe ice damage against shield is broken?
-        - Unable to reproduce.
 
 
     - Add a procedural cave to the material overworld with 1-3 checks
