--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -42,15 +42,32 @@ Cannot reproduce:
         - Unable to reproduce.
     - There was a bug where almost killing Storm Heart with burning damage would leave it invulnerable, but I haven't been able to reproduce.
         - If this happens again, investigate the state of the Storm Heart to get a better understanding of what triggers this, for example is it related to enrage or enemy iframes?
+    - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
+        - Possibly fixed by other changes.
 
 Current tasks:
-    - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
+    - Fix clones continue to drain spirit energy when switching to a new area instance.
+        - Despawn clones that aren't in the hero's current area.
+    - For some reason picking up/throwing a clone seems to reset spirit energy cooldown.
+
+    - Add a variant cave with new paths to the mountains + spirit world.
+        - 3 possible entrances determined by variant seed:
+            - Overworld near Mountain Tower
+            - West most area of Waterfall Village
+            - Inside of Bush Cave
+        - Contains a spirit world portal behind Clone Tool (cracked wall) or staff (rocks surrounded by pits)
+        - Contains a 50 Jade check with no logic requirements
+        - Peach Piece behind either medium range switch or cloak switches
+        - One time difficult enemy encounter on the path to the exit/spirit world:
+            - Golem hand + 2 charging beetles
+            - Ent + 2 arrow turrets
+            - Triple elements + Plants
+        - Exit blocked by Cloud Boots/Ice(U-turn cracked ground) or Astral Projection (pot switches in both worlds)
+            - Exits to ledge above entrance to cave ascent, which will now have a Silver Ore on it.
 
     - Add a short grace period where whirlpools cannot grab you when surfacing in an area.
         - Not sure if we have an existing timer for determining this, but we could add the time the hero entered the area if necessary.
 
-    - Add a procedural cave to the material overworld with 1-3 checks
-        - checks blocked by any early game items: bow/roll/gloves/astral projection/cloak/teleportation
 
     - Add Spike Boots that replace leather boots. Spike boots never slip and have 10% increased movement speed.
         - Have to find schematics + 1 silver ore and can craft at regular smith after fully upgrading chakram.
@@ -65,14 +82,6 @@ Current tasks:
             - Use 2x scale elements for NPCs
         - Add NPC with a check to the East building
         - Add a visible check somewhere outside that can be peaked early with spirit sight
-
-    - Add new visualization for spirit energy cooldown
-        - Track recently lost/expended spirit energy
-        - Draw recently lost/expended spirit energy on top of spirit energy in an orange color
-        - Each frame reduce recently lost/expended spirit energy by 20ms / cooldown ms so it always hits 0 when cooldown expires.
-        - The effect would be that you see your expended spirit energy get consumed gradually and regen does not start until the animation completes.
-        - One oddity is that when your spirit energy becomes negative, the orange bar might suddenly become taller than previously.
-            - Should make sure to limit the orange bar so that it cannot visually go over the top of the bar.
 
     - Add consumable items
         - Peach Potion - Restores 5 hearts
