--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -41,13 +41,24 @@ Cannot reproduce:
     - Robot stopped moving in ST basement. Maybe ice damage against shield is broken?
     - There was a bug where almost killing Storm Heart with burning damage would leave it invulnerable, but I haven't been able to reproduce.
         - If this happens again, investigate the state of the Storm Heart to get a better understanding of what triggers this, for example is it related to enrage or enemy iframes?
+        - Reproduced with level 2 bow and fire arrows attacking a lot right before it became enraged:
+            life: -0.15999
+            mode: choose
+            modeTime: 8180
+            shielded: false
+            params:
+                cloudIsReforming: false,
+                cloudLife: 7,
+                cloudRegenerateTimer: 0,
+                enrageLevel: 2,
+                enrageTime: 0
+                counterATtackTimer: 0
+            isDefeated: false, isImmortal: undefined, isInvulernable: false, enemyInvulnerableFrames: 0, invulnerableFrames: 0,
+            burnDamage: 0.16000004 // Interesting that this doesn't go to 0, possibly a clue.
     - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
         - Possibly fixed by other changes.
 
 Current tasks:
-
-    - Fix level 1 staff shows as level 2 staff when obtained after level 2 staff in randomizer.
-
     - Come up with a method for generating enemy patterns in generated areas.
         - Want to be able to have a consitent theme for an area
             - So of multiple possible enemy combinations, one is chosen for a zone and then each section chooses enemies from this combination.
@@ -77,6 +88,12 @@ Current tasks:
         - Forge Boots that replace iron boots. Forge boots have no movement penalty and can walk on lava without taking damage.
             - Schematics are given by the spirit smith after fully upgrading the gold chakram.
             - Bring schematics, 1 gold ore and iron boots to spirit Smith to upgrade to forge boots after fully upgrade gold chakram.
+
+    - Improvement, carried object should drop when astral projection despawns holding something.
+        - Right now it just disappears with the astral projection.
+
+    - Puzzle idea: break a ball with the staff so that you can roll a ball that it is linked to in the other world.
+        - Instead of this being required, this could be used to make a puzzle much less time consuming.
 
     - Add additional blockedPath styles.
         - Maybe cracked pots requiring clone tool
